--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <h1>Olá, mundo!</h1>
   <button class="btn">APERTE</button>
   
- // linha comentada //
+ <!-- // linha comentada // -->
 </body>
 </html>
